--- a/catalog.html
+++ b/catalog.html
@@ -56,29 +56,50 @@
                           </li>
                       </ul>
                  <!-- </nav> -->
+
          </div>
     </nav>
 </header>
     <main class="main-catalog">
-<picture>
+<!--<picture>
 <source media="(min-width:320px)"
- srcset="src/img/item1-mobile-1x.jpg , src/img/item1-mobile-2x.jpg ,
- src/img/item2-mobile-1x.jpg , src/img/item2-mobile-2x.jpg ,
- src/img/item3-mobile-1x.jpg , src/img/item3-mobile-2x.jpg">
+ srcset="src/img/item1-mobile-1x.jpg 260w,src/img/item1-mobile-2x.jpg 260w ,
+  src/img/item2-mobile-1x.jpg 260w , src/img/item2-mobile-2x.jpg 260w ,
+   src/img/item3-mobile-1x.jpg 260w, src/img/item3-mobile-2x.jpg 260w">
 
 <source media="(min-width:768px )"
- srcset="src/img/item1-desktop-1x.jpg , src/img/item1-desktop-2x.jpg ,
-  src/img/item2-desktop-1x.jpg ,src/img/item2-desktop-2x.jpg ,
-   src/img/item3-desktop-1x.jpg  ,src/img/item3-desktop-2x.jpg">
+ srcset="src/img/item1-desktop-1x.jpg 334w, src/img/item1-desktop-2x.jpg 334w,
+  src/img/item2-desktop-1x.jpg 334w ,src/img/item2-desktop-2x.jpg 334w ,
+   src/img/item3-desktop-1x.jpg 334w ,src/img/item3-desktop-2x.jpg 334w">
+
 <source media="(min-width: 1150px)"
- srcset="src/img/item1-tablet-1x.jpg , src/img/item1-tablet-2x.jpg ,
-  src/img/item2-tablet-1x.jpg ,src/img/item2-tablet-2x.jpg ,
-   src/img/item3-tablet-1x.jpg  ,src/img/item3-tablet-2x.jpg">
-</picture>
+ srcset="src/img/item1-tablet-1x.jpg 316w , src/img/item1-tablet-2x.jpg 316w ,
+  src/img/item2-tablet-1x.jpg 316w , src/img/item2-tablet-2x.jpg 316w ,
+   src/img/item3-tablet-1x.jpg 316w ,src/img/item3-tablet-2x.jpg 316w">
+
+</picture>-->
         <h2 class="main-catalog__title">Каталог товаров</h2>
 <div class="main-catalog__title-line"></div>
             <section class="catalog">
-              <div class="catalog__img"></div>
+              <div class="catalog__img">
+
+<!--<img alt="img"  src="src/img/item1-mobile-1x.jpg"
+srcset="src/img/item1-mobile-1x.jpg 260w,
+src/img/item1-tablet-1x.jpg 334w,
+src/img/item1-desktop-1x.jpg ">-->
+
+<!--<picture>
+<source media="(min-width:320px )" srcset=" src/img/item1-mobile-2x.jpg 260w">
+<source media="(min-width:768px )"srcset="src/img/item1-tablet-1x.jpg 334w ">
+<source media="(min-width:1150px )" srcset="src/img/item1-desktop-2x.jpg 316w">
+<img src="src/img/item1-mobile-1x.jpg"  alt="img">
+
+
+
+</picture>-->
+
+
+              </div>
                 <div class="catalog__item">
                   <h3 class="catalog__title">Зайчик-попрыгайчик</h3>
                     <div class="catalog__detail">
