--- a/form.html
+++ b/form.html
@@ -39,6 +39,15 @@
                         <li class="menu-top__item">
                             <a class="menu-top__link" href="#">Корзина: пока пуста</a>
                         </li>
+  <!--<li class="menu-top__item menu-top__item--delivery">
+    <p class="menu-top__text menu-top__text--delivery">Бесплатная доставка по России</p>
+  </li>
+  <li class="menu-top__item menu-top__item--new">
+    <a class="menu-top__link">Новые поступления</a>
+  </li>
+  <li class="menu-top__item menu-top__item--sale">
+    <a class="menu-top__link">Распродажа</a>
+  </li>-->
                     </ul>
               </div>
          </nav>
