внесла изменения в разметке footer в катологе и форме

--- a/catalog.html
+++ b/catalog.html
@@ -154,25 +154,33 @@
 <div class="overlay"></div>
 </section>
        </main>
-<footer class="footer">
-<div class="footer__logo"></div>
-  <div class="footer__social">
-    <a class="footer__link" href="#">
-      <i class="footer__insta" src="" width="" height="" alt="instagram"></i>
-    </a>
-    <a class="footer__link" href="#">
-      <i class="footer__facebook" src="" width="" height="" alt="facebook"></i>
-    </a>
-    <a class="footer__link" href="#">
-      <i class="footer__twitter" src="" width="" height="" alt="twitter"></i>
-    </a>
-  </div>
-  <div class="footer__copyright">
-    <p class="footer__creator">Разработано
-      <img class="footer__icon">
-    </p>
-  </div>
-</footer>
+       <footer class="footer">
+        <div class="footer__bg">
+            <div class="footer__inner">
+                <div class="footer__logo">
+                    <a class="footer__logo-link">
+                      <span class="footer__logo-icon"></span>
+                    </a>
+               </div>
+               <div class="footer__social">
+                    <a class="footer__link footer__insta" href="#">
+                        <!-- <span class="footer__insta"></span> -->
+                    </a>
+                    <a class="footer__link footer__facebook" href="#">
+                        <!-- <span class="footer__facebook"></span> -->
+                    </a>
+                    <a class="footer__link footer__twitter" href="#">
+                        <!-- <span class="footer__twitter"></span> -->
+                    </a>
+               </div>
+               <div class="footer__copyright">
+                   <p class="footer__creator">Разработано
+                       <span class="footer__icon"></span>
+                  </p>
+               </div>
+           </div>
+        </div>
+    </footer>
 
 <script src="src/js/picturefill.js"></script>
 <script src="src/js/main.js"></script>
