--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
                         <span class="hamburger">
                             <span class="openBtn"></span>
                             <span class="closeBtn"></span>
-                        </span>  
+                        </span>
                     </button>
         <nav class="nav">
             <div class="menu-top">
-                    
+
                     <!-- <nav class="hamburger__nav"> -->
                         <ul class="menu-top__list closed" id="menuList">
                             <div class="menu-top__logo">
@@ -65,7 +65,7 @@
                         <span class="menu-bottom__icon1 icon"></span>
                         <a class="menu-bottom__link" href="#"><p class="menu-bottom__caption">Предметы интерьера</p></a>
                     </li>
-                    
+
                     <li class="menu-bottom__item">
                         <span class="menu-bottom__icon2 icon"></span>
                         <a class="menu-bottom__link" href="#"><p class="menu-bottom__caption">Детские игрушки</p></a>
@@ -97,7 +97,7 @@
                    </table>
                 </div>
                 <picture>
-                    <source media="(min-width: 320px) and (orientation: portrait)" 
+                    <source media="(min-width: 320px) and (orientation: portrait)"
                     srcset="src/img/triple-mobile-1x.jpg 1x, src/img/triple-mobile-2x.jpg 2x" type="image/jpg">
                     <source media="(min-width: 768px) and (orientation: portrait)"
                     srcset="src/img/triple-tablet-1x.jpg 1x, src/img/triple-tablet-2x.jpg 2x" type="image/jpg">
@@ -107,7 +107,7 @@
                 </picture>
                 <div class="catalog-card__to-buy">
                     <p class="catalog-card__price">Цена: 990 руб.</p>
-                    <button class="btn catalog-card__btn" >Заказать</button>
+                    <button class="btn catalog-card__btn" id="myBtn" >Заказать</button>
                 </div>
           </div>
       </section>
@@ -133,7 +133,7 @@
                     </p>
                     <div class="slider__user">
                        <span class="slider__auth">Анастасия Красильникова</span>
-                       <span class="slider__nick">@misssssiskras</span> 
+                       <span class="slider__nick">@misssssiskras</span>
                     </div>
                 </div>
                  <div class="slide-content slider__slide2">
@@ -165,7 +165,7 @@
        </div>
         <div class="map">
             <picture>
-                <source media="(min-width: 320px) and (orientation: portrait)" 
+                <source media="(min-width: 320px) and (orientation: portrait)"
                 srcset="src/img/map-mobile-1x.jpg 1x, src/img/map-mobile-2x.jpg 2x" type="image/jpg">
                 <!-- <img sizes="(min-width: 320px)" src="src/img/map-mobile-1x.jpg"> -->
                 <source media="(min-width: 768px)"
@@ -206,22 +206,22 @@
        </div>
     </div>
 </footer>
-<div class="modal-ctg" id="MyModal">
+<div class="modal-ctg" id="myModal">
         <form class="modal-ctg__form">
              <h2 class="modal-ctg__title">Добавить в корзину</h2>
              <p class="modal-ctg__text">Выберите размер</p>
             <div class="modal-ctg__group">
                 <div class="modal-ctg__ch-gr">
                    <input class="modal-ctg__input" type="checkbox" id="ch1" name="check" checked>
-                   <label class="modal-ctg__size" for="ch1">S</label> 
+                   <label class="modal-ctg__size" for="ch1">S</label>
                 </div>
                 <div class="modal-ctg__ch-gr">
                    <input class="modal-ctg__input" type="checkbox" id="ch2" name="check">
-                   <label class="modal-ctg__size" for="ch2">M</label> 
+                   <label class="modal-ctg__size" for="ch2">M</label>
                 </div>
                 <div class="modal-ctg__ch-gr">
                    <input class="modal-ctg__input" type="checkbox" id="ch3" name="check">
-                   <label class="modal-ctg__size" for="ch3">L</label>  
+                   <label class="modal-ctg__size" for="ch3">L</label>
                 </div>
             </div>
         </form>
@@ -229,7 +229,7 @@
 </div>
 <script type="text/javascript" src="src/js/hamburger.js"></script>
 <script type="text/javascript" src="src/js/slider.js"></script>
-<script type="text/javascript" src="src/js/modal.js"></script>
-
+<!--<script type="text/javascript" src="src/js/modal.js"></script>-->
+<script type="text/javascript" src="src/js/main.js"></script>
 </body>
 </html>
