добавлено readme.md,небольшие исправления в форме и каталоге

--- a/catalog.html
+++ b/catalog.html
@@ -16,11 +16,11 @@
                     <span class="hamburger">
                         <span class="openBtn"></span>
                         <span class="closeBtn"></span>
-                    </span>  
+                    </span>
                 </button>
     <nav class="nav">
         <div class="menu-top">
-                
+
                 <!-- <nav class="hamburger__nav"> -->
                     <ul class="menu-top__list closed" id="menuList">
                         <div class="menu-top__logo">
@@ -61,45 +61,20 @@
     </nav>
 </header>
     <main class="main-catalog">
-<!--<picture>
-<source media="(min-width:320px)"
- srcset="src/img/item1-mobile-1x.jpg 260w,src/img/item1-mobile-2x.jpg 260w ,
-  src/img/item2-mobile-1x.jpg 260w , src/img/item2-mobile-2x.jpg 260w ,
-   src/img/item3-mobile-1x.jpg 260w, src/img/item3-mobile-2x.jpg 260w">
 
-<source media="(min-width:768px )"
- srcset="src/img/item1-desktop-1x.jpg 334w, src/img/item1-desktop-2x.jpg 334w,
-  src/img/item2-desktop-1x.jpg 334w ,src/img/item2-desktop-2x.jpg 334w ,
-   src/img/item3-desktop-1x.jpg 334w ,src/img/item3-desktop-2x.jpg 334w">
-
-<source media="(min-width: 1150px)"
- srcset="src/img/item1-tablet-1x.jpg 316w , src/img/item1-tablet-2x.jpg 316w ,
-  src/img/item2-tablet-1x.jpg 316w , src/img/item2-tablet-2x.jpg 316w ,
-   src/img/item3-tablet-1x.jpg 316w ,src/img/item3-tablet-2x.jpg 316w">
-
-</picture>-->
         <h2 class="main-catalog__title">Каталог товаров</h2>
 <div class="main-catalog__title-line"></div>
             <section class="catalog">
               <div class="catalog__img">
+<picture>
+  <source media="(min-width:320px) and (orientation: portrait)" srcset="src/img/item1-mobile-1x.jpg 1x, src/img/item1-mobile-2x.jpg 2x">
+  <source media="(min-width:768px) and (orientation:portait)" srcset="src/img/item1-tablet-1x.jpg 1x, src/img/item1-tablet-2x.jpg 2x">
 
-<!--<img alt="img"  src="src/img/item1-mobile-1x.jpg"
-srcset="src/img/item1-mobile-1x.jpg 260w,
-src/img/item1-tablet-1x.jpg 334w,
-src/img/item1-desktop-1x.jpg ">-->
+  <source media="(min-width: 1024px)" srcset="src/img/item1-desktop-1x.jpg 1x, src/img/item1-desktop-2x.jpg 2x">
+  <img src="src/img/item1-mobile-1x.jpg" alt="" class="catalog__img">
 
-<!--<picture>
-<source media="(min-width:320px )" srcset=" src/img/item1-mobile-2x.jpg 260w">
-<source media="(min-width:768px )"srcset="src/img/item1-tablet-1x.jpg 334w ">
-<source media="(min-width:1150px )" srcset="src/img/item1-desktop-2x.jpg 316w">
-<img src="src/img/item1-mobile-1x.jpg"  alt="img">
-
-
-
-</picture>-->
-
-
-              </div>
+</picture>
+</div>
                 <div class="catalog__item">
                   <h3 class="catalog__title">Зайчик-попрыгайчик</h3>
                     <div class="catalog__detail">
@@ -112,7 +87,17 @@ src/img/item1-desktop-1x.jpg ">-->
                     </div>
                     </div>
                 </div>
-              <div class="catalog__img1"></div>
+              <div class="catalog__img1">
+<picture>
+  <source media="(min-width:320px) and (orientation: portrait)" srcset="src/img/item2-mobile-1x.jpg 1x, src/img/item2-mobile-2x.jpg 2x">
+  <source media="(min-width:768px) and (orientation:portait)" srcset="src/img/item2-tablet-1x.jpg 1x, src/img/item2-tablet-2x.jpg 2x">
+
+  <source media="(min-width: 1024px)" srcset="src/img/item2-desktop-1x.jpg 1x, src/img/item2-desktop-2x.jpg 2x">
+  <img src="src/img/item2-mobile-1x.jpg" alt="" class="catalog__img">
+
+</picture>
+
+              </div>
                 <div class="catalog__item">
                   <h3 class="catalog__title">Корзинка для белья</h3>
                       <div class="catalog__detail">
@@ -125,9 +110,16 @@ src/img/item1-desktop-1x.jpg ">-->
                     </div>
                     </div>
                 </div>
-<div class="catalog__img2"></div>
-<!--<img class="catalog__img" src="src/img/item3-mobile-1x.jpg"  alt="Большая корзина для игрушек">-->
-                <div class="catalog__item">
+<div class="catalog__img2">
+  <picture>
+    <source media="(min-width:320px) and (orientation: portrait)" srcset="src/img/item3-mobile-1x.jpg 1x, src/img/item3-mobile-2x.jpg 2x">
+    <source media="(min-width:768px) and (orientation:portait)" srcset="src/img/item3-tablet-1x.jpg 1x, src/img/item3-tablet-2x.jpg 2x">
+  <source media="(min-width: 1024px)" srcset="src/img/item3-desktop-1x.jpg 1x, src/img/item3-desktop-2x.jpg 2x">
+    <img src="src/img/item3-mobile-1x.jpg" alt="" class="catalog__img">
+
+  </picture>
+</div>
+<div class="catalog__item">
                   <h3 class="catalog__title">Большая корзина для игрушек</h3>
                     <div class="catalog__detail">
                         <p class="catalog__descr--line">Диаметр 30 см, высота 30 см</p>
