--- a/index.html
+++ b/index.html
@@ -96,15 +96,20 @@
                        </tr>
                    </table>
                 </div>
-                <picture>
-                    <source media="(min-width: 320px) and (orientation: portrait)" 
-                    srcset="src/img/triple-mobile-1x.jpg 1x, src/img/triple-mobile-2x.jpg 2x" type="image/jpg">
-                    <source media="(min-width: 768px) and (orientation: portrait)"
-                    srcset="src/img/triple-tablet-1x.jpg 1x, src/img/triple-tablet-2x.jpg 2x" type="image/jpg">
-                    <source media="(min-width: 1024px)"
-                    srcset="src/img/triple-desktop-1x.jpg 1x, src/img/triple-desktop-2x.jpg 2x" type="image/jpg">
-                    <img class="catalog-card__img" src="src/img/triple-desktop-1x.jpg" alt="Вязаные корзинки">
-                </picture>
+                <div class="catalog-card__picture">
+                    <picture>
+                       <source media="screen and (min-width: 320px) and (orientation: portrait)" 
+                               srcset="src/img/triple-mobile-2x.webp 2x, src/img/triple-mobile-1x.webp 1x" type="image/webp"
+                               srcset="src/img/triple-mobile-2x.jpg 2x, src/img/triple-mobile-1x.jpg 1x" type="image/jpg">
+                       <source media="screen and (min-width: 768px) and (orientation: portrait)"
+                               srcset="src/img/triple-desktop-2x.webp 2x, src/img/triple-desktop-1x.webp 1x" type="image/webp"
+                               srcset="src/img/triple-desktop-2x.jpg 2x, src/img/triple-desktop-1x.jpg 1x" type="image/jpg">
+                       <source media="screen and (min-width: 1024px)"
+                               srcset="src/img/triple-desktop-2x.webp 2x, src/img/triple-desktop-1x.webp 1x" type="image/webp"
+                               srcset="src/img/triple-desktop-2x.jpg 2x, src/img/triple-desktop-1x.jpg 1x" type="image/jpg">
+                       <img class="catalog-card__img" src="src/img/triple-mobile-1x.jpg" alt="Вязаные корзинки">
+                   </picture>
+                </div>
                 <div class="catalog-card__to-buy">
                     <p class="catalog-card__price">Цена: 990 руб.</p>
                     <button class="btn catalog-card__btn" >Заказать</button>
@@ -165,15 +170,16 @@
        </div>
         <div class="map">
             <picture>
-                <source media="(min-width: 320px) and (orientation: portrait)" 
-                srcset="src/img/map-mobile-1x.jpg 1x, src/img/map-mobile-2x.jpg 2x" type="image/jpg">
-                <!-- <img sizes="(min-width: 320px)" src="src/img/map-mobile-1x.jpg"> -->
-                <source media="(min-width: 768px)"
-                srcset="src/img/map-tablet-1x.jpg 1x, src/img/map-tablet-2x.jpg 2x" type="image/jpg">
-                <!-- <img sizes="(min-width: 768px)" src="src/img/map-tablet-1x.jpg"> -->
-                <source media="(min-width: 1024px)"
-                srcset="src/img/map-desktop-1x.jpg 1x, src/img/map-desktop-2x.jpg 2x" type="image/jpg">
-                <img src="src/img/map-desktop-1x.jpg" alt="Map">
+                <source media="screen and (min-width: 320px) and (orientation: portrait)" 
+                        srcset="src/img/map-mobile-2x.webp 2x, src/img/map-mobile-1x.webp 1x" type="image/webp"
+                        srcset="src/img/map-mobile-2x.jpg 2x, src/img/map-mobile-1x.jpg 1x" type="image/jpg">
+                <source media="screen and (min-width: 768px) and (orientation: portrait)"
+                        srcset="src/img/map-tablet-2x.webp 2x, src/img/map-tablet-1x.webp 1x" type="image/webp"
+                        srcset="src/img/map-tablet-2x.jpg 2x, src/img/map-tablet-1x.jpg 1x" type="image/jpg">
+                <source media="screen and (min-width: 1024px) and (orientation: landscape)"
+                        srcset="src/img/map-desktop-2x.webp 2x, src/img/map-desktop-1x.webp 1x" type="image/webp"
+                        srcset="src/img/map-desktop-2x.jpg 2x, src/img/map-desktop-1x.jpg 1x" type="image/jpg">
+                <img src="src/img/map-mobile-1x.jpg" alt="Map">
             </picture>
         </div>
         <button class="btn contacts__btn">Напишите нам</button>
