--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 </div>
                 <div class="catalog-card__picture">
                     <picture>
-                       <source media="screen and (min-width: 320px) and (orientation: portrait)" 
+                       <source media="screen and (min-width: 320px) and (orientation: portrait)"
                                srcset="src/img/triple-mobile-2x.webp 2x, src/img/triple-mobile-1x.webp 1x" type="image/webp"
                                srcset="src/img/triple-mobile-2x.jpg 2x, src/img/triple-mobile-1x.jpg 1x" type="image/jpg">
                        <source media="screen and (min-width: 768px) and (orientation: portrait)"
@@ -112,8 +112,47 @@
                 </div>
                 <div class="catalog-card__to-buy">
                     <p class="catalog-card__price">Цена: 990 руб.</p>
+
                     <button class="btn catalog-card__btn" id="myBtn" >Заказать</button>
-                </div>
+                    </div>
+<div class="modal-ctg" id="myModal">
+  <h2 class="modal-ctg__title">Добавить в корзину</h2>
+  <p class="modal-ctg__text">Выберите размер</p>
+  <div class="modal-ctg__form">
+    <input class="modal-ctg__input" type="radio" name="check" checked>
+    <label class="modal-ctg__size">S</label>
+    <input class="modal-ctg__input" type="radio" name="check">
+    <label class="modal-ctg__size">M</label>
+    <input class="modal-ctg__input" type="radio" name="check">
+    <label class="modal-ctg__size">L</label>
+  </div>
+  <button class="btn modal-ctg__btn">Добавить</button>
+</div>
+<!--<div class="modal-ctg" id="myModal">
+  <form class="modal-ctg__form">
+    <h2 class="modal-ctg__title">Добавить в корзину</h2>
+    <p class="modal-ctg__text">Выберите размер</p>
+    <div class="modal-ctg__group">
+      <div class="modal-ctg__ch-gr">
+        <input class="modal-ctg__input" type="checkbox" id="ch1" name="check" checked>
+        <label class="modal-ctg__size" for="ch1">S</label>
+      </div>
+      <div class="modal-ctg__ch-gr">
+        <input class="modal-ctg__input" type="checkbox" id="ch2" name="check">
+        <label class="modal-ctg__size" for="ch2">M</label>
+      </div>
+      <div class="modal-ctg__ch-gr">
+        <input class="modal-ctg__input" type="checkbox" id="ch3" name="check">
+        <label class="modal-ctg__size" for="ch3">L</label>
+      </div>
+    </div>
+  </form>
+
+  <button class="btn modal-ctg__btn">Добавить</button>
+</div>-->
+<div class="overlay"></div>
+
+
           </div>
       </section>
       <section class="about-us">
@@ -170,7 +209,7 @@
        </div>
         <div class="map">
             <picture>
-                <source media="screen and (min-width: 320px) and (orientation: portrait)" 
+                <source media="screen and (min-width: 320px) and (orientation: portrait)"
                         srcset="src/img/map-mobile-2x.webp 2x, src/img/map-mobile-1x.webp 1x" type="image/webp"
                         srcset="src/img/map-mobile-2x.jpg 2x, src/img/map-mobile-1x.jpg 1x" type="image/jpg">
                 <source media="screen and (min-width: 768px) and (orientation: portrait)"
@@ -212,27 +251,7 @@
        </div>
     </div>
 </footer>
-<div class="modal-ctg" id="myModal">
-        <form class="modal-ctg__form">
-             <h2 class="modal-ctg__title">Добавить в корзину</h2>
-             <p class="modal-ctg__text">Выберите размер</p>
-            <div class="modal-ctg__group">
-                <div class="modal-ctg__ch-gr">
-                   <input class="modal-ctg__input" type="checkbox" id="ch1" name="check" checked>
-                   <label class="modal-ctg__size" for="ch1">S</label>
-                </div>
-                <div class="modal-ctg__ch-gr">
-                   <input class="modal-ctg__input" type="checkbox" id="ch2" name="check">
-                   <label class="modal-ctg__size" for="ch2">M</label>
-                </div>
-                <div class="modal-ctg__ch-gr">
-                   <input class="modal-ctg__input" type="checkbox" id="ch3" name="check">
-                   <label class="modal-ctg__size" for="ch3">L</label>
-                </div>
-            </div>
-        </form>
-    <button class="modal-ctg__btn btn" id="add">Добавить</button>
-</div>
+
 <script type="text/javascript" src="src/js/hamburger.js"></script>
 <script type="text/javascript" src="src/js/slider.js"></script>
 <!--<script type="text/javascript" src="src/js/modal.js"></script>-->
