--- a/index.html
+++ b/index.html
@@ -187,10 +187,24 @@
                     </div>
                 </div>
                  <div class="slide-content slider__slide2">
-                    <p class="slider__comment">Второй слайд</p>
+                    <p class="slider__comment">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков,
+                        как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке,
+                        и мои фотографии сразу стали более стильными, а также набирают больше лайков!
+                    </p>
+                    <div class="slider__user">
+                        <span class="slider__auth">Анастасия Красильникова</span>
+                        <span class="slider__nick">@misssssiskras</span>
+                    </div>
                 </div>
                 <div class="slide-content slider__slide3">
-                    <p class="slider__comment">Третий слайд</p>
+                    <p class="slider__comment">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков,
+                        как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке,
+                        и мои фотографии сразу стали более стильными, а также набирают больше лайков!
+                    </p>
+                    <div class="slider__user">
+                        <span class="slider__auth">Анастасия Красильникова</span>
+                        <span class="slider__nick">@misssssiskras</span>
+                    </div>
                </div>
                <div class="slider__controls">
                     <button class="slider__btn-left" id="btn-1"></button>
