добавила шрифты формата woff2/woff/eot. Также добавила ссылки с предзагрузкой шрифтов и стилей

--- a/form.html
+++ b/form.html
@@ -6,6 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="dist/css/main.css">
     <script src="src/js/picturefill.js"></script>
+    <link rel="preload" href="src/js/main.js" as="script">
+    <link rel="preload" href="src/fonts/opensans-regular.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="src/fonts/opensans-bold.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="src/fonts/opensans-regular.woff" as="font" type="font/woff" crossorigin>
+    <link rel="preload" href="src/fonts/opensans-bold.woff" as="font" type="font/woff" crossorigin>
+    <link rel="preload" href="dist/css/main.css" as="style" onload="this.rel='stylesheet'">
     <title>Mishka - интернет - магазин</title>
 </head>
 <body>
