--- a/catalog.html
+++ b/catalog.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="dist/css/main.css">
     <script src="src/js/picturefill.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" type="text/javascript"></script>
+<link rel="preload" href="src/js/main.js" as="script">
+    <link rel="preload" href="src/fonts/opensans-regular.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="src/fonts/opensans-bold.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="src/fonts/opensans-regular.woff" as="font" type="font/woff" crossorigin>
+    <link rel="preload" href="src/fonts/opensans-bold.woff" as="font" type="font/woff" crossorigin>
+    <link rel="preload" href="dist/css/main.css" as="style" onload="this.rel='stylesheet'">
 
 <title>Mishka - интернет - магазин - каталог</title>
 </head>
