--- a/index.html
+++ b/index.html
@@ -7,15 +7,18 @@
     <link rel="stylesheet" href="dist/css/main.css">
     <script src="src/js/main.js"></script>
     <script src="src/js/picturefill.js"></script>
+    <link rel="preload" href="src/js/main.js" as="script">
+    <link rel="preload" href="src/fonts/opensans-regular.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="src/fonts/opensans-bold.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="src/fonts/opensans-regular.woff" as="font" type="font/woff" crossorigin>
+    <link rel="preload" href="src/fonts/opensans-bold.woff" as="font" type="font/woff" crossorigin>
+    <link rel="preload" href="dist/css/main.css" as="style" onload="this.rel='stylesheet'">
     <title>Mishka - интернет - магазин</title>
 </head>
 <body>
     <header class="header">
         <nav class="nav">
             <div class="menu-top">
-                       <!-- <div class="menu-top__logo">
-                            <a class="menu-top__logo-link" href="index.html"><i class="menu-top__logo-img"></i></a>
-                       </div> -->
                        <div class="hamburger-menu">
                            <button class="hamburger-btn closed" id="buttonMenu">
                                <span class="hamburger">
@@ -157,8 +160,6 @@
   <button class="btn modal-ctg__btn">Добавить</button>
 </div>-->
 <div class="overlay"></div>
-
-
           </div>
       </section>
       <section class="about-us">
