не большие исправление стилей в каталоге

--- a/catalog.html
+++ b/catalog.html
@@ -139,7 +139,7 @@
 </picture>
 </div>
 <div class="catalog__item">
-                  <h3 class="catalog__title">Большая корзина для игрушек</h3>
+                  <h3 class="catalog__title">Большая корзинка для игрушек</h3>
                     <div class="catalog__detail">
                         <p class="catalog__descr--line">Диаметр 30 см, высота 30 см</p>
                       <div class="catalog-price">
