логотип снова стал картинкой

--- a/form.html
+++ b/form.html
@@ -27,9 +27,13 @@
 
                     <!-- <nav class="hamburger__nav"> -->
                         <ul class="menu-top__list closed" id="menuList">
-                            <div class="menu-top__logo">
-                            <a class="menu-top__logo-link" href="index.html"><i class="menu-top__logo-img"></i></a>
-                       </div>
+                            <li class="menu-top__logo">
+                                <a class="menu-top__logo-link" href="index.html">
+                                    <img class="menu-top__logo-mobile" src="src/img/logo-mobile.png">
+                                    <img class="menu-top__logo-tablet" src="src/img/logo-tablet.png">
+                                    <img class="menu-top__logo-desktop" src="src/img/logo-desktop.png">
+                                </a>
+                            </li>
                            <li class="menu-top__item">
                                <a class="menu-top__link menu-top__link--catalog" href="catalog.html">
                                    Каталог товаров
