--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
                         <ul class="menu-top__list closed" id="menuList">
                             <li class="menu-top__logo">
                                 <a class="menu-top__logo-link" href="index.html">
-                                    <span class="menu-top__logo-img"></span>
+                                    <img class="menu-top__logo-mobile" src="src/img/logo-mobile.png">
+                                    <img class="menu-top__logo-tablet" src="src/img/logo-tablet.png">
+                                    <img class="menu-top__logo-desktop" src="src/img/logo-desktop.png">
                                 </a>
                             </li>
                            <li class="menu-top__item">
